--- a/asset/Pytorch_Workflow.ipynb
+++ b/asset/Pytorch_Workflow.ipynb
@@ -16,7 +16,7 @@
         "id": "N8LsPXZti9Sw"
       },
       "source": [
-        "# 01. PyTorch Workflow Exercise Template\n",
+        "# PyTorch Workflow Template\n",
         "\n",
         "The following is a template for the PyTorch workflow exercises.\n",
         "\n",
