Update models folder

--- a/asset/test01.ipynb
+++ b/asset/test01.ipynb
@@ -16,9 +16,7 @@
         "id": "N8LsPXZti9Sw"
       },
       "source": [
-        "# PyTorch Workflow Template\n",
-        "\n",
-        "The following is a template for the PyTorch workflow exercises."
+        "# Import necessary libraries"
       ]
     },
     {
@@ -68,23 +66,7 @@
         "id": "g7HUhxCxjeBx"
       },
       "source": [
-        "## 1. Create a straight line dataset using the linear regression formula (`weight * X + bias`).\n",
-        "  * Set `weight=0.3` and `bias=0.9` there should be at least 100 datapoints total. \n",
-        "  * Split the data into 80% training, 20% testing.\n",
-        "  * Plot the training and testing data so it becomes visual.\n",
-        "\n",
-        "Your output of the below cell should look something like:\n",
-        "```\n",
-        "Number of X samples: 100\n",
-        "Number of y samples: 100\n",
-        "First 10 X & y samples:\n",
-        "X: tensor([0.0000, 0.0100, 0.0200, 0.0300, 0.0400, 0.0500, 0.0600, 0.0700, 0.0800,\n",
-        "        0.0900])\n",
-        "y: tensor([0.9000, 0.9030, 0.9060, 0.9090, 0.9120, 0.9150, 0.9180, 0.9210, 0.9240,\n",
-        "        0.9270])\n",
-        "```\n",
-        "\n",
-        "Of course the numbers in `X` and `y` may be different but ideally they're created using the linear regression formula."
+        "## 1. Create dataset using linear regression formula"
       ]
     },
     {
@@ -181,11 +163,7 @@
         "id": "ImZoe3v8jif8"
       },
       "source": [
-        "## 2. Build a PyTorch model by subclassing `nn.Module`. \n",
-        "  * Inside should be a randomly initialized `nn.Parameter()` with `requires_grad=True`, one for `weights` and one for `bias`. \n",
-        "  * Implement the `forward()` method to compute the linear regression function you used to create the dataset in 1. \n",
-        "  * Once you've constructed the model, make an instance of it and check its `state_dict()`.\n",
-        "  * **Note:** If you'd like to use `nn.Linear()` instead of `nn.Parameter()` you can."
+        "## 2. Build a PyTorch model by subclassing `nn.Module`"
       ]
     },
     {
@@ -240,7 +218,7 @@
         "id": "G6nYOrJhjtfu"
       },
       "source": [
-        "## 3. Create a loss function and optimizer using `nn.L1Loss()` and `torch.optim.SGD(params, lr)` respectively. \n",
+        "## 3. Create a loss function and optimizer using `nn.L1Loss()` and `torch.optim.SGD(params, lr)` respectively\n",
         "  * Set the learning rate of the optimizer to be 0.01 and the parameters to optimize should be the model parameters from the model you created in 2.\n",
         "  * Write a training loop to perform the appropriate training steps for 300 epochs.\n",
         "  * The training loop should test the model on the test dataset every 20 epochs."
