Update HuggingFace Inference Provider

--- a/asset/HuggingFace_Inference_Provider.ipynb
+++ b/asset/HuggingFace_Inference_Provider.ipynb
@@ -9,21 +9,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "ChatCompletionMessage(content='9.9 is bigger than 9.11.\\n\\nTo compare them properly, align the decimal places:\\n- 9.90 (which is the same as 9.9)\\n- 9.11\\n\\nComparing digit by digit from left to right:\\n- Ones place: both are 9 (equal)\\n- Tenths place: 9 vs 1\\n- Since 9 > 1, we can conclude 9.90 > 9.11\\n\\nThe common mistake is thinking \"11\" is larger than \"9\" without considering decimal place values. But 0.9 is significantly larger than 0.11.', refusal=None, role='assistant', annotations=None, audio=None, function_call=None, tool_calls=None, reasoning_content='The user asks which is bigger, 9.11 or 9.9. This is a straightforward numerical comparison, but they ask me to \"think carefully.\" This might be a trick question or a common mistake people make.\\n\\nLet me compare them:\\n- 9.11 means 9 + 0.11\\n- 9.9 means 9 + 0.9\\n\\nSince 0.9 is greater than 0.11, 9.9 is greater than 9.11.\\n\\nI can also think of them as:\\n- 9.11 = 9.11\\n- 9.9 = 9.90\\n\\nComparing digit by digit from left to right:\\n- Ones place: both are 9 (equal)\\n- Tenths place: 9.11 has 1, 9.9 has 9\\n- Since 9 > 1, 9.9 > 9.11\\n\\nThis is a common mistake because people might think \"11\" is bigger than \"9\" without considering the decimal places properly. But 9.9 is the same as 9.90, which is clearly larger than 9.11.\\n\\nSo the answer is 9.9 is bigger.')\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
-        "from openai import OpenAI\n",
-        "\n",
+        "from openai import OpenAI"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "client = OpenAI(\n",
         "    base_url=\"https://router.huggingface.co/v1\",\n",
         "    api_key=os.environ[\"HF_TOKEN\"],\n",
@@ -35,144 +34,51 @@
         "        {\"role\": \"system\", \"content\": \"You are Kimi, an AI assistant created by Moonshot AI.\"},\n",
         "        {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": \"which one is bigger, 9.11 or 9.9? think carefully.\"}]},\n",
         "    ],\n",
-        ")\n",
-        "\n",
-        "print(completion.choices[0].message)"
+        ")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "9.9 is bigger than 9.11.\n",
-            "\n",
-            "To compare them properly, align the decimal places:\n",
-            "- 9.90 (which is the same as 9.9)\n",
-            "- 9.11\n",
-            "\n",
-            "Comparing digit by digit from left to right:\n",
-            "- Ones place: both are 9 (equal)\n",
-            "- Tenths place: 9 vs 1\n",
-            "- Since 9 > 1, we can conclude 9.90 > 9.11\n",
-            "\n",
-            "The common mistake is thinking \"11\" is larger than \"9\" without considering decimal place values. But 0.9 is significantly larger than 0.11.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print(completion.choices[0].message.content)"
+        "print(f\"k2 answer: {completion.choices[0].message.content}\")\n",
+        "print(\"\\n=====below is reasoning content======\\n\")\n",
+        "print(f\"reasoning content: {completion.choices[0].message.reasoning_content}\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Inference Provider using Local Resource"
+        "# Inference using Local Resource"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# !uv pip install openai"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import openai\n",
+        "# Use a pipeline as a high-level helper\n",
+        "from transformers import pipeline\n",
         "\n",
-        "def simple_chat(client: openai.OpenAI, model_name: str):\n",
-        "    messages = [\n",
-        "        {\"role\": \"system\", \"content\": \"You are Kimi, an AI assistant created by Moonshot AI.\"},\n",
-        "        {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": \"which one is bigger, 9.11 or 9.9? think carefully.\"}]},\n",
-        "    ]\n",
-        "    response = client.chat.completions.create(\n",
-        "        model=model_name,\n",
-        "        messages=messages,\n",
-        "        stream=False,\n",
-        "        temperature=1.0,\n",
-        "        max_tokens=4096\n",
-        "    )\n",
-        "    print(f\"k2 answer: {response.choices[0].message.content}\")\n",
-        "    print(\"=====below is reasoning content======\")\n",
-        "    print(f\"reasoning content: {response.choices[0].message.reasoning_content}\")\n"
+        "pipe = pipeline(\"text-generation\", model=\"moonshotai/Kimi-K2-Thinking\", trust_remote_code=True)\n",
+        "\n",
+        "messages=[\n",
+        "    {\"role\": \"system\", \"content\": \"You are Kimi, an AI assistant created by Moonshot AI.\"},\n",
+        "    {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": \"which one is bigger, 9.11 or 9.9? think carefully.\"}]},\n",
+        "]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "k2 answer: 9.9 is bigger than 9.11.\n",
-            "\n",
-            "To compare them properly, align the decimal places:\n",
-            "- 9.90\n",
-            "- 9.11\n",
-            "\n",
-            "Now compare digit by digit from left to right:\n",
-            "- Ones place: both are 9 (equal)\n",
-            "- Tenths place: 9 vs 1 → 9 is greater\n",
-            "\n",
-            "Since 9 > 1 in the tenths place, **9.90 (or 9.9) is larger**.\n",
-            "\n",
-            "The common mistake is thinking 9.11 might be bigger because \"11\" sounds larger than \"9\", but this ignores place value. 9.9 is nine and nine-tenths (which equals nine and ninety-hundredths), while 9.11 is only nine and eleven-hundredths.\n",
-            "=====below is reasoning content======\n",
-            "reasoning content: The user is asking which is bigger: 9.11 or 9.9. This seems like a simple question, but they said \"think carefully,\" which suggests there might be a trick or common mistake here.\n",
-            "\n",
-            "Let me think about this carefully.\n",
-            "\n",
-            "First, let's compare these two numbers:\n",
-            "- 9.11\n",
-            "- 9.9\n",
-            "\n",
-            "The common mistake people make is comparing digit by digit without considering place values properly. Let me break it down:\n",
-            "\n",
-            "9.11 means 9 + 0.11\n",
-            "9.9 means 9 + 0.9\n",
-            "\n",
-            "Now, 0.9 is the same as 0.90. So we can rewrite:\n",
-            "9.9 = 9.90\n",
-            "\n",
-            "Now comparing:\n",
-            "9.11 vs 9.90\n",
-            "\n",
-            "Looking at the tenths place:\n",
-            "- 9.11 has 1 in the tenths place\n",
-            "- 9.90 has 9 in the tenths place\n",
-            "\n",
-            "Since 9 > 1, clearly 9.90 > 9.11\n",
-            "\n",
-            "Therefore, 9.9 is bigger than 9.11.\n",
-            "\n",
-            "The \"think carefully\" prompt might be because some people mistakenly think 9.11 is bigger because 11 > 9, but that's incorrect because theyre ignoring the decimal places. 9.11 is 9 and 11 hundredths, while 9.9 is 9 and 9 tenths (which is 90 hundredths).\n",
-            "\n",
-            "Let me double-check:\n",
-            "9.9 = 9.90 = 9 + 90/100\n",
-            "9.11 = 9 + 11/100\n",
-            "\n",
-            "90/100 > 11/100, so 9.9 > 9.11\n",
-            "\n",
-            "Yes, the answer is 9.9.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "simple_chat(client, model_name=\"moonshotai/Kimi-K2-Thinking:novita\")"
+        "pipe(messages)"
       ]
     }
   ],
