Update HF fine-tuning a SLM

--- a/asset/HuggingFace_Fine-tuning_SLM.ipynb
+++ b/asset/HuggingFace_Fine-tuning_SLM.ipynb
@@ -1124,46 +1124,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "# Reference\n",
+        "[Hugging Face LLM Full Fine Tune Tutorial](https://www.learnhuggingface.com/notebooks/hugging_face_llm_full_fine_tune_tutorial)  \n",
+        "[SFTConfig](https://huggingface.co/docs/trl/v0.26.2/en/sft_trainer)"
+      ]
     }
   ],
   "metadata": {
